--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import '/src/styles/variables';
+
+body {
+    margin: 0px;
+    background-color: $home-background-color;
+    font-family: "Manrope", sans-serif;
+}
